# static-optimal-tree

./: .gitignore  CMakeLists.txt  Pipfile  README.md  drawgraph.py  main.cpp  st_random.sh
include/: net.h  requests.h  tasks.h  tree.h
include/san/: central_splay_net.h  period_optimal_net.h  splay.h
scripts/: README.md  draw_plot.py  iterate_comparison.sh  iterate_plots.sh  merge_comparison_with_splaynet.py  merge_csvs.py  refactor_real_workload.py  sample_random.py  transfer_real_input.py  transfer_robert_input.py
scripts/real_traces_merged/: sample_fb.csv  sample_hpc.csv  sample_mic.csv  sample_pfabric.csv  sample_ptor.csv  sample_uni.csv
scripts/robert_0406_merged/: sample_0.4.csv  sample_0.6.csv
scripts/robert_small_traces_merged/: sample_0.25.csv  sample_0.5.csv  sample_0.75.csv  sample_0.9.csv  sample_0.csv
scripts/robert_traces_merged/: sample_0.25.csv  sample_0.5.csv  sample_0.75.csv  sample_0.9.csv  sample_0.csv
src/: net.cpp  requests.cpp  static_optimal_net.cpp  uniform_net.cpp
src/san/: central_splay_net.cpp  period_optimal_net.cpp  splay.cpp
src/tasks/: comparison.cpp
tests/: main.cpp  net.cpp  optimal_net.cpp  uniform_net.cpp
tests/san/: splay_net.cpp
